@@ -1,3 +1,8 @@
+2017-04-18  Richard Sandiford  <richard.sandiford@arm.com>
+
+	PR rtl-optimization/80357
+	* gcc.c-torture/compile/pr80357.c: New test.
+
 2017-04-18  Jeff Law  <law@redhat.com>
 
 	PR middle-end/80422
